--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -19,7 +19,7 @@
 			color: #ff0000c9;
 		}
 
-		.imagex {
+		.img {
 			background-color: transparent;
 		}
 	</style>
@@ -38,7 +38,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<img class="plain image" style="background-color: transparent; width: 30%"
+				<img class="plain" style="background-color: transparent; width: 30%"
 					src="images/accesa_logo_registered_big_white_slogan.png" />
 				<div data-markdown>
 					<textarea data-template>
@@ -48,7 +48,7 @@
 				</div>
 			</section>
 			<section data-background-color="#fff">
-				<img class="plain image" src="images/wordcloud.svg" />
+				<img class="plain" src="images/wordcloud.svg" />
 				<aside class="notes" data-markdown>
 					<textarea data-template>
 								- DevOps stands out in the word cloud
@@ -86,7 +86,7 @@
 					</aside>
 				</section>
 				<section>
-					<img src="images/waterafall-agile.svg"/>
+					<img src="images/waterfall-agile.svg"/>
 					<aside class="notes">
 						<ul>
 							<li>Short cycles</li>
@@ -94,7 +94,7 @@
 					</aside>
 				</section>
 				<section>
-					<img src="images/waterafall-agile-devops.svg"/>
+					<img src="images/waterfall-agile-devops.svg"/>
 					<aside class="notes">
 						<ul>
 							<li>Short cycles</li>
@@ -160,7 +160,25 @@
 					</textarea>
 				</section>
 				<section data-background-color="#fff">
-					<img src="images/ci-cd-cd.png"/>
+					<img class="plain" src="images/ci-cd-cd.png"/>
+				</section>
+			</section>
+			<section>
+				<section data-markdown>
+					<textarea data-template>
+						### DevOps tools
+
+						
+					</textarea>
+				</section>
+			</section>
+			<section>
+				<section data-markdown>
+					<textarea data-template>
+						### Testing in DevOps culture
+
+						
+					</textarea>
 				</section>
 			</section>
 		</div>
